# opera-seria-harmonic-analysis

./: .gitignore  LICENSE  README.md  pyproject.toml
data/output/figures/interactive/: interactive_chord_timeline.html
papers/: overview.bcf  overview.tex  references.bib
src/: paths.py
src/analysis/: chord_distribution_depending_on_year.py  chord_distribution_rolling_time_windows.py  composers.py  major_minor_distribution_periods.py  types.py  util.py
src/analysis/chord_distribution/: chord_distribution_depending_on_emotions.py  chord_distribution_depending_on_year.py  chord_distribution_rolling_time_windows.py  chord_trend_grouping.py  chord_usage_timeline_loess.py
src/analysis/schemata/: post_process.py  pre_process.py  process.py  schemata.py  skipgrams.py
src/analysis/tonal_journey/: tonal_journey_of_aria.py
src/corpus/: build_aria_index.py  build_period_map.py  build_tsv_parallel.py  load_emotion_table.py  models.py
src/corpus/util/: get_all_chords.py  get_arias_with_high_chord_usage.py  util.py
src/opera_seria_harmonic_analysis.egg-info/: PKG-INFO  SOURCES.txt
src/scripts/: build_index.py  build_tsv.py  build_tsv_parallel.py
src/types/: models.py
src/validation/: check_years.py  duplicate_names.py
src/visualization/: chord_usage_timeline_loess.py  fda_timeline.py  major_minor.py  schema_timeline_loess.py  util.py
src/visualization/archive/: chord_distributions.py  chord_usage_timeline.py
src/visualization/interactive/: interactive_chord_distribution_rolling_windows.py
