[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "opera_seria_harmonic_analysis"
version = "0.1.0"
description = "Harmonic analysis of opera seria arias"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]