[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "opera_seria_harmonic_analysis"
version = "0.1.0"
description = "Harmonic analysis of opera seria arias"
authors = [
    {name = "Nathan Zumbusch", email = "nathan.zumbusch@stud.hslu.ch"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ms3>=2.0.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "plotly>=5.14.0",
    "scikit-fda>=0.8.0",
    "scienceplots>=2.1.0",
    "tqdm>=4.65.0",
    "pydantic>=2.0.0",
    "scikit-learn>=1.2.0",
    "scipy>=1.10.0",
    "openpyxl>=3.1.0",
    "ruff>=0.1.0",
]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]